<?xml version="1.0" encoding="utf-8"?>
<com.flipboard.bottomsheet.BottomSheetLayout android:id="@+id/bottomsheet"
    android:layout_width="match_parent"
    app:layout_constraintCircleRadius="10dp"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".Activity.MainActivity">

    <ImageView
        android:scaleType="fitXY"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:src="@drawable/login_image"/>
    <LinearLayout
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/referal_code_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_a"/>
        <TextView
            android:id="@+id/enter_code_tv"
            android:layout_marginLeft="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_code"
            android:textColor="@color/blue"/>


    </LinearLayout>
    <Button
        android:id="@+id/signup_bt"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textAllCaps="true"
        android:textColor="@color/theme_white"
        android:background="@drawable/button_shape"/>

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/policy_1"/>
        <TextView
            android:layout_marginLeft="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/policy_2"
            android:textColor="@color/blue"/>
    </LinearLayout>

</LinearLayout>
</com.flipboard.bottomsheet.BottomSheetLayout>
